--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "bluebird": "^3.7.2",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "glob": "^9.3.0",
